Update Project - Bike Rental Analysis.ipynb

--- a/Project - Bike Rental Analysis.ipynb
+++ b/Project - Bike Rental Analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Project : Bike Rental Analysis**\n",
+    "# **Project 4 : Bike Rental Analysis**\n",
     "\n",
     "## **Table of Contents**\n",
     "<ul>\n",
